--- a/pages/about.html
+++ b/pages/about.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About - Shadrach Malaque</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
 <div class="header">
   <h1>Shadrach Malaque</h1>
-  <p>A website about me.</p>
+  <p>My Portfolio</p>
 </div>
 
 <div class="navbar">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
+  <a href="home.html">Home</a>
+  <a href="about.html" aria-current="page">About</a>
   <a href="contact.html">Contact</a>
-  <a href="#" class="right"> My Portfolio</a>
+  <a href="projects.html">Projects</a>
 </div>
 
 <div class="row">
   <div class="side">
     <h2>About Me</h2>
-    <img src="unnamed.jpg" class="profile-img" alt="Profile photo">
+    <img src="../assets/images/unnamed.jpg" class="profile-img" alt="Profile photo">
     <p>I’m passionate about creating meaningful work, staying curious, and constantly improving. I believe consistency beats talent, and progress beats perfection.</p>
   </div>
   <div class="main">
