--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact - Shadrach Malaque</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
 <div class="header">
   <h1>Shadrach Malaque</h1>
-  <p>A website about me.</p>
+  <p>My Portfolio</p>
 </div>
 
 <div class="navbar">
-  <a href="index.html">Home</a>
+  <a href="home.html">Home</a>
   <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
-  <a href="#" class="right"> My Portfolio</a>
+  <a href="contact.html" aria-current="page">Contact</a>
+  <a href="projects.html">Projects</a>
+  
 </div>
 
 <div class="row">
